[gd_scene load_steps=4 format=2]

[ext_resource path="res://scenes/enemyRanged/enemyRanged.gd" type="Script" id=1]
[ext_resource path="res://icon.png" type="Texture" id=2]

[sub_resource type="RectangleShape2D" id=2]
extents = Vector2( 32, 32 )

[node name="enemyRanged" type="KinematicBody2D"]
position = Vector2( 211, 201 )
script = ExtResource( 1 )

[node name="twnGray" type="Tween" parent="."]

[node name="twnDespawn" type="Tween" parent="."]

[node name="tmrDespawn" type="Timer" parent="."]
wait_time = 2.0
one_shot = true

[node name="tmrAttack" type="Timer" parent="."]
wait_time = 5.0
one_shot = true
autostart = true

[node name="sprite" type="Sprite" parent="."]
texture = ExtResource( 2 )

[node name="collisionShape2D" type="CollisionShape2D" parent="."]
shape = SubResource( 2 )
[connection signal="tween_completed" from="twnDespawn" to="." method="_on_twnDespawn_tween_completed"]
[connection signal="timeout" from="tmrDespawn" to="." method="_on_tmrDespawn_timeout"]
[connection signal="timeout" from="tmrAttack" to="." method="_on_tmrAttack_timeout"]
